Add FlatBuffers binary protocol